src/styles/notifications.styl
@import 'cozy-ui'

h4
    color grey-08
    font-size 1.2em

h5
    color grey-08
    font-size 1em
    margin-top 0
    margin-bottom 5px

.notification
    display flex
    justify-content flex-start
    align-items center
    max-width 600px
    margin-bottom 20px

.notification-description
    color grey-11
    flex-grow 1
    margin 0
    font-size .9em

input[type='number'].notification-input
    padding .5em .3em
    margin 0 5px
    width 3.5em

    &.suffixed + span
        position absolute
        margin-left -1.5em
        margin-top .6em

